--- a/webroot/adm/enclave-gcp.html
+++ b/webroot/adm/enclave-gcp.html
@@ -135,7 +135,7 @@ write_files:
       "identity_token_expires_after_seconds": 86400,
       "refresh_token_expires_after_seconds": 2592000,
       "refresh_identity_token_after_seconds": 3600,
-      "enclave_platform": "gcp-vmid",
+      "enclave_platform": "gcp-oidc",
       "enforce_https": true,
       "service_instances": 16,
       "allow_legacy_api": false
