--- a/webroot/adm/partner-config.html
+++ b/webroot/adm/partner-config.html
@@ -32,20 +32,114 @@ document.addEventListener('DOMContentLoaded', function () {
     required: true
   };
 
-  const addConfigInput = {
-    name: 'addConfigData',
-    label: 'Configuration Data',
+  // 'Add' operation inputs
+  const addPartnerNameInput = {
+    name: 'addPartnerName',
+    label: 'Partner Name',
     required: true,
-    type: 'multi-line',
-    placeholder: 'Enter JSON configuration data (single partner object)...'
+    size: 2
   };
 
-  const updateConfigInput = {
-    name: 'updateConfigData',
-    label: 'Configuration Data',
+  const addUrlInput = {
+    name: 'addUrl',
+    label: 'Webhook URL',
     required: true,
+    size: 3,
+    placeholder: 'https://example.com/webhook'
+  };
+
+  const addMethodInput = {
+    name: 'addMethod',
+    label: 'HTTP Method',
+    required: true,
+    placeholder: 'GET'
+  };
+
+  const addRetryCountInput = {
+    name: 'addRetryCount',
+    label: 'Retry Count',
+    required: true,
+    type: 'number',
+    placeholder: '600'
+  };
+
+  const addRetryBackoffMsInput = {
+    name: 'addRetryBackoffMs',
+    label: 'Retry Backoff (ms)',
+    required: true,
+    type: 'number',
+    placeholder: '6000'
+  };
+
+  const addQueryParamsInput = {
+    name: 'addQueryParams',
+    label: 'Query Parameters (comma-separated)',
+    required: false,
     type: 'multi-line',
-    placeholder: 'Enter JSON configuration data (single partner object)...'
+    placeholder: 'action=dooptout,\nuid2=${ADVERTISING_ID},\ntimestamp=${OPTOUT_EPOCH}'
+  };
+
+  const addAdditionalHeadersInput = {
+    name: 'addAdditionalHeaders',
+    label: 'Additional Headers (comma-separated)',
+    required: false,
+    type: 'multi-line',
+    placeholder: 'Authorization: Bearer token,\nX-Custom-Header: value'
+  };
+
+  // 'Update' operation inputs
+  const updatePartnerNameInput = {
+    name: 'updatePartnerName',
+    label: 'Partner Name',
+    required: true,
+    size: 2
+  };
+
+  const updateUrlInput = {
+    name: 'updateUrl',
+    label: 'Webhook URL',
+    required: false,
+    size: 3,
+    placeholder: 'https://example.com/webhook'
+  };
+
+  const updateMethodInput = {
+    name: 'updateMethod',
+    label: 'HTTP Method',
+    required: false,
+    placeholder: 'GET'
+  };
+
+  const updateRetryCountInput = {
+    name: 'updateRetryCount',
+    label: 'Retry Count',
+    required: false,
+    type: 'number',
+    placeholder: '600'
+  };
+
+  const updateRetryBackoffMsInput = {
+    name: 'updateRetryBackoffMs',
+    label: 'Retry Backoff (ms)',
+    required: false,
+    type: 'number',
+    placeholder: '6000'
+  };
+
+  const updateQueryParamsInput = {
+    name: 'updateQueryParams',
+    label: 'Query Parameters (comma-separated)',
+    required: false,
+    type: 'multi-line',
+    placeholder: 'action=dooptout,\nuid2=${ADVERTISING_ID},\ntimestamp=${OPTOUT_EPOCH}'
+  };
+
+  const updateAdditionalHeadersInput = {
+    name: 'updateAdditionalHeaders',
+    label: 'Additional Headers (comma-separated)',
+    required: false,
+    type: 'multi-line',
+    placeholder: 'Authorization: Bearer token,\nX-Custom-Header: value'
   };
 
   const bulkReplaceConfigInput = {
@@ -88,22 +182,35 @@ document.addEventListener('DOMContentLoaded', function () {
         role: 'maintainer',
         description: 'This will add a new partner config.',
         inputs: [
-          addConfigInput
+          addPartnerNameInput,
+          addUrlInput,
+          addMethodInput,
+          addQueryParamsInput,
+          addAdditionalHeadersInput,
+          addRetryCountInput,
+          addRetryBackoffMsInput
         ],
         apiCall: {
           method: 'POST',
           url: '/api/partner_config/add',
           getPayload: (inputs) => {
-            // Validate and parse JSON
-            try {
-              const config = JSON.parse(inputs.addConfigData);
-              if (!config.name) {
-                throw new Error('Partner config must include "name" field');
-              }
-              return config;
-            } catch (e) {
-              throw new Error('Invalid JSON format: ' + e.message);
+            const payload = {
+              name: inputs.addPartnerName,
+              url: inputs.addUrl,
+              method: inputs.addMethod,
+              retry_count: parseInt(inputs.addRetryCount),
+              retry_backoff_ms: parseInt(inputs.addRetryBackoffMs)
+            };
+
+            // Parse comma-separated inputs into arrays
+            if (inputs.addQueryParams && inputs.addQueryParams.trim()) {
+              payload.query_params = inputs.addQueryParams.split(',').map(s => s.trim()).filter(s => s);
             }
+            if (inputs.addAdditionalHeaders && inputs.addAdditionalHeaders.trim()) {
+              payload.additional_headers = inputs.addAdditionalHeaders.split(',').map(s => s.trim()).filter(s => s);
+            }
+
+            return payload;
           }
         }
       },
@@ -111,24 +218,35 @@ document.addEventListener('DOMContentLoaded', function () {
         id: 'updatePartnerConfig',
         title: 'Update Partner Config',
         role: 'maintainer',
-        description: 'This will replace an existing partner config.',
+        description: 'This will update an existing partner config. Only fill in the fields you want to change.',
         inputs: [
-          updateConfigInput
+          updatePartnerNameInput,
+          updateUrlInput,
+          updateMethodInput,
+          updateQueryParamsInput,
+          updateAdditionalHeadersInput,
+          updateRetryCountInput,
+          updateRetryBackoffMsInput
         ],
         apiCall: {
           method: 'PUT',
           url: '/api/partner_config/update',
           getPayload: (inputs) => {
-            // Validate and parse JSON
-            try {
-              const config = JSON.parse(inputs.updateConfigData);
-              if (!config.name) {
-                throw new Error('Partner config must include "name" field');
-              }
-              return config;
-            } catch (e) {
-              throw new Error('Invalid JSON format: ' + e.message);
+            const payload = { name: inputs.updatePartnerName };
+            if (inputs.updateUrl) payload.url = inputs.updateUrl;
+            if (inputs.updateMethod) payload.method = inputs.updateMethod;
+            if (inputs.updateRetryCount) payload.retry_count = parseInt(inputs.updateRetryCount);
+            if (inputs.updateRetryBackoffMs) payload.retry_backoff_ms = parseInt(inputs.updateRetryBackoffMs);
+
+            // Parse comma-separated inputs into arrays (only if provided)
+            if (inputs.updateQueryParams && inputs.updateQueryParams.trim()) {
+              payload.query_params = inputs.updateQueryParams.split(',').map(s => s.trim()).filter(s => s);
             }
+            if (inputs.updateAdditionalHeaders && inputs.updateAdditionalHeaders.trim()) {
+              payload.additional_headers = inputs.updateAdditionalHeaders.split(',').map(s => s.trim()).filter(s => s);
+            }
+
+            return payload;
           }
         }
       }
