fix delete role in UI

--- a/webroot/adm/partner-config.html
+++ b/webroot/adm/partner-config.html
@@ -255,7 +255,7 @@ document.addEventListener('DOMContentLoaded', function () {
       {
         id: 'deletePartnerConfig',
         title: 'Delete Partner Config',
-        role: 'privileged',
+        role: 'elevated',
         description: 'This will remove the partner configuration.',
         inputs: [deletePartnerNameInput],
         apiCall: {
